--- a/android_studio_proj/MyAppAndroid2/app/build.gradle
+++ b/android_studio_proj/MyAppAndroid2/app/build.gradle
@@ -33,4 +33,14 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M1'
     compile 'com.google.code.gson:gson:1.7.2'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    //compile 'com.parse.bolts:bolts-android:1.3.0'
+    //compile 'com.squareup.okhttp:okhttp:2.7.0'
+
+    //compile 'com.parse.bolts:bolts-android:1.4.0'
+    //compile 'com.squareup.okhttp:okhttp:2.7.2'
+
+
+    //compile 'com.parse:parse-android:1.12.0'
+    compile 'com.parse:parse-android:1.13.0'
 }
