--- a/android_studio_proj/MyWeatherApp/app/build.gradle
+++ b/android_studio_proj/MyWeatherApp/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
 }
