--- a/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/AndroidManifest.xml
@@ -5,6 +5,12 @@
     <!-- allow the app to access the network from the phone. -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.REGISTER" />
+    <uses-permission android:name="com.amazonaws.androidtest.permission.C2D_MESSAGE" />
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -24,8 +30,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <!--android:name=".activitypkg.CitySearchActivity" -->
         <activity
-            android:name=".activitypkg.CitySearchActivity"
+            android:name="jmtechsvcs.myweatherapp.snstest.AndroidMobilePushApp"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -34,6 +41,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name="jmtechsvcs.myweatherapp.snstest.MessageReceivingService"
+            android:label="com.amazonaws.androidtest.MessageReceivingService" >
+            <intent-filter>
+                <action android:name="com.amazonaws.androidtest.AndroidMobilePushApp" />
+                <action android:name="com.amazonaws.androidtest.ExternalReceiver" />
+                <category android:name="com.amazonaws.androidtest" />
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name="jmtechsvcs.myweatherapp.snstest.ExternalReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                <action android:name="com.google.android.c2dm.intent.REGISTER" />
+
+                <category android:name="com.amazonaws.androidtest" />
+            </intent-filter>
+        </receiver>
+
 
         <!-- added this service component for background processing. -->
         <service
