--- a/FaceRestClient/pom.xml
+++ b/FaceRestClient/pom.xml
@@ -12,8 +12,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
+  
   <dependencies>
     <dependency>
         <groupId>org.springframework</groupId>
@@ -43,4 +45,32 @@
 	    <version>1.2.17</version>
 	</dependency>
   </dependencies>
+  
+  <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+				
+						<transformers>
+			                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+			                <manifestEntries>
+			                    <mainClass>myfacetime.FaceRestClient.App</mainClass>			                    
+			                  </manifestEntries>
+			                </transformer>
+		              </transformers>
+					<finalName>${artifactId}-${version}</finalName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
