--- a/FaceRestMicroSvc/pom.xml
+++ b/FaceRestMicroSvc/pom.xml
@@ -50,6 +50,11 @@
 		    <artifactId>httpclient</artifactId>		    
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>	
+		</dependency>
+		
 	</dependencies>
 
 	<build>
