--- a/android_studio_proj/MyAppAndroid2/app/build.gradle
+++ b/android_studio_proj/MyAppAndroid2/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 25
     buildToolsVersion '21.1.2'
     defaultConfig {
         applicationId "tech.jm.myappandroid2"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -33,14 +33,11 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M1'
     compile 'com.google.code.gson:gson:1.7.2'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-
     //compile 'com.parse.bolts:bolts-android:1.3.0'
     //compile 'com.squareup.okhttp:okhttp:2.7.0'
-
     //compile 'com.parse.bolts:bolts-android:1.4.0'
     //compile 'com.squareup.okhttp:okhttp:2.7.2'
-
-
     //compile 'com.parse:parse-android:1.12.0'
     compile 'com.parse:parse-android:1.13.0'
+    compile 'com.android.support:design:25.1.1'
 }
