--- a/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Main3Activity"
             android:configChanges="orientation"
             android:label="@string/app_name">
             <intent-filter>
@@ -97,21 +97,21 @@
         </activity>
         <activity
             android:name=".MainActivity2"
-            android:label="@string/title_activity_main_activity2"></activity>
+            android:label="@string/title_activity_main_activity2" />
         <activity
             android:name=".MainActivity3Activity"
-            android:label="@string/title_activity_main_activity3"></activity>
+            android:label="@string/title_activity_main_activity3" />
         <activity
             android:name=".MainActivity32Activity"
-            android:label="@string/title_activity_main_activity32"></activity>
+            android:label="@string/title_activity_main_activity32" />
 
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".MyIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <receiver
             android:name=".MyReceiver"
@@ -136,14 +136,18 @@
             android:name=".MyContentProvider"
             android:authorities="tech.jm.myappandroid2.mycontentprovider"
             android:enabled="true"
-            android:exported="true"></provider>
+            android:exported="true" />
 
         <activity
             android:name=".MainActivity33Activity"
-            android:label="@string/title_activity_main_activity33"></activity>
+            android:label="@string/title_activity_main_activity33" />
         <activity
             android:name=".UTBlankActivity"
-            android:label="@string/title_activity_utblank"></activity>
+            android:label="@string/title_activity_utblank" />
+        <!--
+        <activity
+            android:name=".Main3Activity"
+            android:label="@string/title_activity_main3"></activity>-->
     </application>
 
 </manifest>
