--- a/SampleSmartFoxClient/.classpath
+++ b/SampleSmartFoxClient/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="lib" path="lib/sfs2x-client-core.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-simple-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/sfs2x-core.jar"/>
+	<classpathentry kind="lib" path="lib/sfs2x.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
